--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.reto1">
+
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the "MyLocation" functionality.
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <!-- Permisos normales solo se declaran en el manifest ejemplo internet -->
     <!-- Permisos peligrosos se declaran y se le muestra al usuario como el acceso a la camara o galeria -->
     <uses-permission android:name="android.permission.CAMERA" />
@@ -13,6 +21,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Reto1">
+
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/.
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".EscogerUbicacionActivity"
+            android:exported="true"
+            android:label="@string/title_activity_escoger_ubicacion" />
         <activity
             android:name=".DesicionFoto"
             android:exported="true" />
@@ -27,7 +52,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity> <!-- para la camara, la foto completa -->
+            android:exported="true" /> <!-- para la camara, la foto completa -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.reto1"
